feat(workplaceDetailsCompletionBanner): Changed button from a tag to button tag

--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -8,15 +8,9 @@
 
       <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
         <p>Check the workplace details you've added before you confirm them.</p>
-        <a
-          class="govuk-button"
-          role="button"
-          draggable="false"
-          (click)="showConfirmWorkplaceDetailsAlert($event)"
-          style="text-decoration: none"
-        >
+        <button class="govuk-button" type="button" (click)="showConfirmWorkplaceDetailsAlert($event)">
           Confirm workplace details
-        </a>
+        </button>
       </div>
 
       <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary>
