--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -14,7 +14,7 @@
           <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
             Add your staff leavers from the last 12 months
           </h1>
-          <p class="govuk-hint">These should only be leavers who are permanent or temporary staff.</p>
+          <p>These should only be leavers who are permanent or temporary staff.</p>
         </legend>
       </div>
     </div>
@@ -26,10 +26,10 @@
       >
         <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div>
-            <h2 class="govuk-grid-column-full govuk-heading-m">Job role {{ i + 1 }}</h2>
+            <h2 class="govuk-grid-column-full govuk-heading-s">Job role {{ i + 1 }}</h2>
           </div>
           <div class="govuk-grid-column-two-thirds govuk-form-group govuk-!-margin-bottom-0">
-            <label for="jobRole-0" class="govuk-label">Job Role</label>
+            <label for="jobRole-0" class="govuk-label">Job role</label>
           </div>
           <div class="govuk-grid-column-one-third">
             <label for="total-0" class="govuk-label">Number of leavers</label>
@@ -66,7 +66,7 @@
               </ng-container>
             </span>
             <input
-              class="govuk-input govuk-!-width-one-half"
+              class="govuk-input govuk-!-width-one-third govuk-!-margin-right-9"
               [class.govuk-input--error]="submitted && leaver.get('total').invalid"
               [formControlName]="'total'"
               id="total-{{ i }}"
@@ -76,7 +76,7 @@
             <a
               *ngIf="leavers.length > 1"
               href="#"
-              class="govuk-list govuk-list--inline govuk-!-margin-left-3"
+              class="govuk-list govuk-list--inline govuk-!-width-one-third govuk-!-margin-left-6"
               (click)="removeLeaver($event, i)"
               >Remove</a
             >
