--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -8,7 +8,7 @@
 
       <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
         <p>Check the workplace details you've added before you confirm them.</p>
-        <button class="govuk-button" type="button" (click)="showConfirmWorkplaceDetailsAlert($event)">
+        <button class="govuk-button" type="button" (click)="showConfirmWorkplaceDetailsAlert()">
           Confirm workplace details
         </button>
       </div>
