--- a/src/app/features/workplace/view-workplace/view-workplace.component.html
+++ b/src/app/features/workplace/view-workplace/view-workplace.component.html
@@ -25,7 +25,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <app-tabs>
+    <app-tabs (selectedTabClick)="tabClickEvent($event)">
       <app-tab
         [title]="'Workplace'"
         [redAlert]="workplace?.employerType && (showCQCDetailsBanner || showSharingPermissionsBanner)"
