make text change to the page

--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -13,7 +13,7 @@
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">Add your current staff vacancies</h1>
         </legend>
-        <p>This should only be for permanent or temporary staff.</p>
+        <p>These should only be vacancies for permanent or temporary staff</p>
       </div>
     </div>
     <ng-container formArrayName="vacancies">
