--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -10,28 +10,28 @@
   <fieldset class="govuk-fieldset">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">Add your new starters from the last 12 months</h1>
-          <p class="govuk-hint">These should only be new starters who are permanent or temporary staff.</p>
         </legend>
+        <p class="govuk-!-margin-top-8 govuk-!-margin-bottom-6">
+          These should only be new starters who are permanent or temporary staff.
+        </p>
       </div>
     </div>
     <ng-container formArrayName="starterRecords">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds govuk-form-group govuk-!-margin-bottom-0">
-          <label for="jobId-0" class="govuk-label">Job role</label>
-        </div>
-        <div class="govuk-grid-column-one-third">
-          <label for="total-0" class="govuk-label">Number of new starters</label>
-        </div>
-      </div>
       <div
         *ngFor="let record of starterRecords.controls; let i = index"
         [formGroupName]="i"
         [class.govuk-form-group--error]="submitted && record.invalid"
       >
+        <div class="govuk-grid-row govuk-!-margin-bottom-3" [attr.data-testid]="'row-' + i">
+          <div class="govuk-grid-column-full">
+            <h2 class="govuk-heading-s">Job role {{ i + 1 }}</h2>
+          </div>
+        </div>
         <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div class="govuk-grid-column-two-thirds">
+            <label for="jobRole-{{ i }}" class="govuk-label">Job role</label>
             <span *ngIf="submitted" id="record-{{ i }}-error" class="govuk-error-message">
               <ng-container *ngIf="submitted && record.get('jobId').invalid">
                 {{ getFormErrorMessage('starterRecords.jobId', 'required') }}
@@ -51,6 +51,7 @@
             </select>
           </div>
           <div class="govuk-grid-column-one-third">
+            <label for="total-{{ i }}" class="govuk-label">Number of starters</label>
             <span *ngIf="submitted" id="record-total-{{ i }}-error" class="govuk-error-message">
               <ng-container *ngIf="submitted && record.get('total').invalid">
                 <span *ngIf="record.get('total').errors.required">
@@ -81,6 +82,7 @@
             >
           </div>
         </div>
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-bottom-5" />
       </div>
     </ng-container>
     <div class="govuk-grid-row">
@@ -91,7 +93,7 @@
           type="button"
           (click)="addStarter()"
         >
-          Add another new starter
+          Add another job role
         </button>
       </div>
       <div class="govuk-grid-column-one-third">
