--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -17,66 +17,77 @@
       </div>
     </div>
     <ng-container formArrayName="vacancies">
-      <div
+      <!-- <div
         *ngFor="let vacancy of vacanciesArray.controls; let i = index"
         [formGroupName]="i"
         [class.govuk-form-group--error]="submitted && vacancy.invalid"
-      >
+      > -->
+      <div *ngFor="let vacancy of vacanciesArray.controls; let i = index" [formGroupName]="i">
         <div class="govuk-grid-row govuk-!-margin-bottom-6" [attr.data-testid]="'row-' + i">
           <div class="govuk-grid-column-full">
             <h2 class="govuk-heading-s">Job role {{ i + 1 }}</h2>
           </div>
           <div class="govuk-grid-column-two-thirds">
-            <label for="jobRole-{{ i }}" class="govuk-label">Job role</label>
-            <span *ngIf="submitted" id="vacancies-jobRole-error" class="govuk-error-message">
-              <ng-container *ngIf="submitted && vacancy.get('jobRole').invalid">
-                {{ getFormErrorMessage('vacancies.jobRole', 'required') }}
-              </ng-container>
-            </span>
-            <select
-              class="govuk-select govuk-!-width-full"
-              [class.govuk-select--error]="submitted && vacancy.get('jobRole').invalid"
-              [formControlName]="'jobRole'"
-              id="jobRole-{{ i }}"
-              name="jobRole"
+            <div
+              class="govuk-form-group govuk-!-margin-bottom-0"
+              [class.govuk-form-group--error]="submitted && vacancy.get('jobRole').invalid"
             >
-              <option [ngValue]="null">Select job role</option>
-              <option *ngFor="let job of selectableJobs(i)" [value]="job.id">
-                {{ job.title }}
-              </option>
-            </select>
+              <label for="jobRole-{{ i }}" class="govuk-label">Job role</label>
+              <span *ngIf="submitted" id="vacancies-jobRole-error" class="govuk-error-message">
+                <ng-container *ngIf="submitted && vacancy.get('jobRole').invalid">
+                  {{ getFormErrorMessage('vacancies.jobRole', 'required') }}
+                </ng-container>
+              </span>
+              <select
+                class="govuk-select govuk-!-width-full"
+                [class.govuk-select--error]="submitted && vacancy.get('jobRole').invalid"
+                [formControlName]="'jobRole'"
+                id="jobRole-{{ i }}"
+                name="jobRole"
+              >
+                <option [ngValue]="null">Select job role</option>
+                <option *ngFor="let job of selectableJobs(i)" [value]="job.id">
+                  {{ job.title }}
+                </option>
+              </select>
+            </div>
           </div>
 
           <div class="govuk-grid-column-one-third">
-            <label for="total-{{ i }}" class="govuk-label">Number of vacancies</label>
-            <span *ngIf="submitted" id="vacancies-total-error" class="govuk-error-message">
-              <ng-container *ngIf="submitted && vacancy.get('total').invalid">
-                <span *ngIf="vacancy.get('total').errors.required">
-                  {{ getFormErrorMessage('vacancies.total', 'required') }}</span
-                >
-                <span *ngIf="vacancy.get('total').errors.min">
-                  {{ getFormErrorMessage('vacancies.total', 'min') }}</span
-                >
-                <span *ngIf="vacancy.get('total').errors.max">
-                  {{ getFormErrorMessage('vacancies.total', 'max') }}
-                </span>
-              </ng-container>
-            </span>
-            <input
-              class="govuk-input govuk-!-width-one-half"
-              [class.govuk-input--error]="submitted && vacancy.get('total').invalid"
-              [formControlName]="'total'"
-              id="total-{{ i }}"
-              name="total"
-              type="number"
-            />
-            <a
-              *ngIf="vacanciesArray.length > 1"
-              href="#"
-              class="govuk-list govuk-list--inline govuk-!-margin-left-3"
-              (click)="removeVacancy($event, i)"
-              >Remove</a
+            <div
+              class="govuk-form-group govuk-!-margin-bottom-0"
+              [class.govuk-form-group--error]="submitted && vacancy.get('total').invalid"
             >
+              <label for="total-{{ i }}" class="govuk-label">Number of vacancies</label>
+              <span *ngIf="submitted" id="vacancies-total-error" class="govuk-error-message">
+                <ng-container *ngIf="submitted && vacancy.get('total').invalid">
+                  <span *ngIf="vacancy.get('total').errors.required">
+                    {{ getFormErrorMessage('vacancies.total', 'required') }}</span
+                  >
+                  <span *ngIf="vacancy.get('total').errors.min">
+                    {{ getFormErrorMessage('vacancies.total', 'min') }}</span
+                  >
+                  <span *ngIf="vacancy.get('total').errors.max">
+                    {{ getFormErrorMessage('vacancies.total', 'max') }}
+                  </span>
+                </ng-container>
+              </span>
+              <input
+                class="govuk-input govuk-!-width-one-half"
+                [class.govuk-input--error]="submitted && vacancy.get('total').invalid"
+                [formControlName]="'total'"
+                id="total-{{ i }}"
+                name="total"
+                type="number"
+              />
+              <a
+                *ngIf="vacanciesArray.length > 1"
+                href="#"
+                class="govuk-list govuk-list--inline govuk-!-margin-left-3"
+                (click)="removeVacancy($event, i)"
+                >Remove</a
+              >
+            </div>
           </div>
         </div>
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-bottom-7" />
