spike(hideLocationIdForCqcRegulatedWhenHeadOfficesMainService): Update CQC location ID field not to display when main service head office services

--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -33,7 +33,10 @@
       ></app-summary-record-change>
     </dd>
   </div>
-  <div class="govuk-summary-list__row" *ngIf="workplace?.isRegulated">
+  <div
+    class="govuk-summary-list__row"
+    *ngIf="workplace?.isRegulated && workplace?.mainService?.name != 'Head office services'"
+  >
     <dt class="govuk-summary-list__key">CQC location ID</dt>
     <dd class="govuk-summary-list__value">
       {{ workplace.locationId }}
