--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -34,11 +34,7 @@
               >{{ fullname }}</a
             >
           </li>
-          <li
-            *ngIf="!isOnAdminScreen && wdfNewDesignFlag"
-            class="govuk-header__navigation-item"
-            routerLinkActive="active"
-          >
+          <li *ngIf="!isOnAdminScreen" class="govuk-header__navigation-item" routerLinkActive="active">
             <a
               [routerLink]="['/workplace', workplaceId, 'users']"
               class="govuk-header__link"
