--- a/src/app/features/workplace/view-workplace/view-workplace.component.html
+++ b/src/app/features/workplace/view-workplace/view-workplace.component.html
@@ -60,7 +60,7 @@
       <app-tab *ngIf="canViewBenchmarks" [title]="'Benchmarks'">
         <app-benchmarks-tab class="asc-benchmarks-tab" [workplace]="workplace"></app-benchmarks-tab>
       </app-tab>
-      <app-tab *ngIf="canViewListOfUsers" [title]="'Users'" [alert]="false">
+      <app-tab *ngIf="canViewListOfUsers" [title]="'Workplace users'" [alert]="false">
         <app-user-accounts-summary [workplace]="workplace" [showSecondUserBanner]="false"></app-user-accounts-summary>
       </app-tab>
     </app-tabs>
