--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -14,7 +14,7 @@
           <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
             Add your staff leavers from the last 12 months
           </h1>
-          <p>These should only be leavers who are permanent or temporary staff.</p>
+          <p>These should only be leavers who were permanent or temporary staff.</p>
         </legend>
       </div>
     </div>
