feat(removeUserHeaderLinkFromWdfNewDesignFeatureFlag): Began updating userService returnURl

--- a/src/app/features/workplace/user-account-view/user-account-view.component.html
+++ b/src/app/features/workplace/user-account-view/user-account-view.component.html
@@ -53,7 +53,5 @@
   </div>
 </div>
 <div class="govuk-button-group">
-  <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url" [fragment]="'users'">
-    View users
-  </a>
+  <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url"> View users </a>
 </div>
