feat(removeUserHeaderLinkFromWdfNewDesignFeatureFlag): Updated urls/navigation for delete user, user set-up and re-sending activation link

--- a/src/app/features/workplace/user-account-saved/user-account-saved.component.html
+++ b/src/app/features/workplace/user-account-saved/user-account-saved.component.html
@@ -6,7 +6,7 @@
       as a user.
     </p>
     <div class="govuk-button-group">
-      <a role="button" draggable="false" class="govuk-button" [routerLink]="(returnUrl$ | async)?.url"> View users </a>
+      <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url"> View users </a>
     </div>
   </div>
 </div>
