--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -1,28 +1,28 @@
 <div class="govuk-button-group govuk__align-items-unset">
   <ng-container *ngIf="!return; else summary">
     <div>
-      <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick('continue', true)">
+      <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onClick($event, 'continue', true)">
         {{ callToAction }}
       </button>
     </div>
     <div *ngIf="recordSummary" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
       <span class="govuk-visually-hidden">or</span>
-      <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'summary', false)"
+      <a class="govuk-button govuk-button--link" (click)="onClick($event, 'summary', false)"
         >View {{ isExistingStaffRecord ? 'this staff record' : 'workplace details' }}</a
       >
     </div>
     <div *ngIf="canExit" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
       <span class="govuk-visually-hidden">or</span>
-      <a class="govuk-button govuk-button--link" (click)="onLinkClick($event, 'exit', false)">{{ exitText }}</a>
+      <a class="govuk-button govuk-button--link" (click)="onClick($event, 'exit', false)">{{ exitText }}</a>
     </div>
   </ng-container>
   <ng-template #summary>
-    <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onButtonClick('return', true)">
+    <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onClick($event, 'return', true)">
       Save and return
     </button>
 
     <span class="govuk-visually-hidden">or</span>
-    <a class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onLinkClick($event, 'return', false)">{{
+    <a class="govuk-button govuk-button--link govuk-!-margin-left-9" (click)="onClick($event, 'return', false)">{{
       exitText
     }}</a>
   </ng-template>
