errors handling working

--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -51,6 +51,7 @@
                   <div
                     *ngIf="
                       !emptyForm &&
+                      this.formSnapshot.get('vacancies.' + i + '.total').invalid &&
                       (this.formSnapshot.get('vacancies.' + i + '.total').errors.min ||
                         this.formSnapshot.get('vacancies.' + i + '.total').errors.max)
                     "
