--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -1,8 +1,10 @@
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-half">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Workplace</h2>
+  </div>
+</div>
 <ng-container *ngIf="!updateWorkplaceAlert && (showCQCDetailsBanner || showSharingPermissionsBanner)">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Workplace</h2>
-    </div>
     <div class="govuk-grid-column-two-thirds-from-desktop" *ngIf="showCQCDetailsBanner">
       <app-inset-text [color]="'todo'" data-testid="check-cqc-details">
         <h3 class="govuk-heading-s">You need to check your CQC details</h3>
@@ -33,8 +35,7 @@
 <ng-container *ngIf="updateWorkplaceAlert; then alert; else summary"></ng-container>
 <ng-template #alert>
   <app-inset-text *ngIf="updateWorkplaceAlert" color="todo">
-    You need to provide information on your workplace.<br />
-    <a [routerLink]="['/workplace', workplace?.uid, 'start']">Add workplace information</a>
+    <a [routerLink]="['/workplace', workplace?.uid, 'start']">Start to add more details about your workplace</a>
   </app-inset-text>
 </ng-template>
 
