create new function in question component to handle button clicks

--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -13,6 +13,6 @@
   <app-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
-    (clicked)="onSubmit($event)"
+    (clicked)="setSubmitAction($event)"
   ></app-submit-button>
 </form>
