--- a/src/app/features/workplace/other-services/other-services.component.html
+++ b/src/app/features/workplace/other-services/other-services.component.html
@@ -131,6 +131,6 @@
       </div>
     </div>
   </div>
-  <app-submit-button [return]="!!return" [isExistingStaffRecord]="false" (clicked)="onSubmit($event)">
-  </app-submit-button>
+  <app-workplace-submit-button [return]="!!return" [isExistingStaffRecord]="false" (clicked)="setSubmitAction($event)">
+  </app-workplace-submit-button>
 </form>
