--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -10,9 +10,9 @@
   >
   </app-total-staff>
 
-  <app-submit-button
+  <app-workplace-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
     (clicked)="setSubmitAction($event)"
-  ></app-submit-button>
+  ></app-workplace-submit-button>
 </form>
