--- a/src/app/features/workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/features/workplace/type-of-employer/type-of-employer.component.html
@@ -60,9 +60,9 @@
     </div>
   </div>
 
-  <app-submit-button
+  <app-workplace-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
     (clicked)="setSubmitAction($event)"
-  ></app-submit-button>
+  ></app-workplace-submit-button>
 </form>
