--- a/src/app/features/workplace/data-sharing/data-sharing.component.html
+++ b/src/app/features/workplace/data-sharing/data-sharing.component.html
@@ -7,7 +7,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-xl">Share your data</h1>
+    <h1 class="govuk-heading-l">Share your data</h1>
     <div *ngIf="establishment.isRegulated">
       <p>We'd like to share your data with the Care Quality Commission (CQC) and local authorities.</p>
     </div>
