feat(removeUserHeaderLinkFromWdfNewDesignFeatureFlag): Moved setting of user url service to user-account-view

--- a/src/app/features/workplace/user-account-view/user-account-view.component.html
+++ b/src/app/features/workplace/user-account-view/user-account-view.component.html
@@ -53,5 +53,7 @@
   </div>
 </div>
 <div class="govuk-button-group">
-  <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url"> View users </a>
+  <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url" [fragment]="return.fragment">
+    View users
+  </a>
 </div>
