--- a/src/app/features/workplace/user-account-saved/user-account-saved.component.html
+++ b/src/app/features/workplace/user-account-saved/user-account-saved.component.html
@@ -6,7 +6,9 @@
       as a user.
     </p>
     <div class="govuk-button-group">
-      <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url"> View users </a>
+      <a role="button" draggable="false" class="govuk-button" [routerLink]="return.url" [fragment]="return.fragment">
+        View users
+      </a>
     </div>
   </div>
 </div>
