--- a/src/app/features/workplace/user-account-view/user-account-view.component.html
+++ b/src/app/features/workplace/user-account-view/user-account-view.component.html
@@ -10,7 +10,8 @@
         *ngIf="canResendActivationLink"
         draggable="false"
         role="button"
-        href="#"
+        [routerLink]="return.url"
+        [fragment]="return.fragment"
         (click)="resendActivationLink($event)"
       >
         Resend the user set-up email</a
